--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.2.0",
+    "web-push": "^3.6.7",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "typescript": "^5"
